--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,27 @@
             android:id="@+id/layoutCurrentTemp"
             android:layout_width="match_parent"
             android:layout_height="220dp"
+            android:orientation="horizontal"
+            android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/tvCity"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
+
+        <ImageView
+                android:contentDescription=""
+                android:id="@+id/imgCondition"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+        />
         
         <TextView
                 android:id="@+id/tvCurrentTemperature"
                 android:layout_width="wrap_content"
-                android:textSize="50sp"
+                android:textSize="100sp"
+                android:layout_margin="10dp"
+                android:layout_gravity="center"
                 android:layout_height="wrap_content"
         />
 
@@ -41,12 +54,15 @@
             app:layout_constraintTop_toTopOf="parent"
             android:visibility="invisible"/>
 
-    <Button android:layout_width="wrap_content"
+    <Button
+            android:id="@+id/btnSubmit"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/etZip"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:text="Submit"
+            android:onClick="onClick"
             android:visibility="invisible"/>
 
 
