--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -2,13 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+              android:background="@color/background">
 
     <TextView
             android:id="@+id/tvDay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
+            android:textStyle="bold"
+            android:textSize="40sp"
+            android:textAlignment="center"
+            android:layout_gravity="center"
             android:layout_margin="7dp"/>
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -18,13 +22,25 @@
                 android:layout_width="185sp"
                 android:layout_height="wrap_content"
                 android:textSize="35sp"
+                android:textAlignment="center"
                 android:layout_margin="5dp"/>
         <TextView
                 android:id="@+id/tvTempMax"
                 android:layout_width="190sp"
                 android:layout_height="wrap_content"
                 android:textSize="35sp"
+                android:textAlignment="center"
                 android:layout_margin="5dp"/>
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvEqualTemp"
+                android:layout_gravity="center"
+                android:textSize="35sp"
+                android:layout_margin="5dp"
+                android:textAlignment="center"
+                android:visibility="invisible"/>
 
     </LinearLayout>
 
